issues: Filename overflows fixes #724

--- a/github-dark.css
+++ b/github-dark.css
@@ -1222,7 +1222,6 @@
       z-index: 6 !important;
     }
     .pull-request-tab-content .file-header {
-      height: 32px !important;
       padding: 1px 10px !important;
     }
     .pull-request-tab-content .diff-view .file-actions,
